--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 INVERTEXTO_API_KEY=
+
 GEMINI_API_KEY=
+GEMINI_URL=
+GEMINI_MODEL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
