chore(env): adiciona variáveis VAPID de exemplo para push notifications
- Atualiza o `.env.example` para documentar a configuração necessária de Web Push
- Inclui as chaves VAPID no template de ambiente:
  - `VITE_VAPID_PUBLIC_KEY` (exposta ao front via Vite)
  - `VAPID_PUBLIC_KEY` (uso no backend)
  - `VAPID_PRIVATE_KEY` (uso no backend)
- Facilita o setup em novos ambientes e evita falhas por chave ausente

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+VITE_VAPID_PUBLIC_KEY=
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
