--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
         "filament/filament": "^4.5",
+        "kreait/laravel-firebase": "^6.2",
         "laravel-notification-channels/webpush": "^10.4",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
