--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite-plugin-compression": "^0.5.1"
     },
     "dependencies": {
+        "firebase": "^12.7.0",
         "sweetalert2": "^11.26.17"
     }
 }
