--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "firebase": "^12.7.0",
+        "gsap": "^3.14.2",
         "sweetalert2": "^11.26.17"
     }
 }
