--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Frequência Certa",
     "start_url": "/dashboard",
     "display": "standalone",
-    "background_color": "#f3f4f6",
-    "theme_color": "#2563eb",
+    "background_color": "#0F172A",
+    "theme_color": "#2D6AE6",
     "orientation": "portrait",
     "scope": "/",
     "lang": "pt-BR",
@@ -168,13 +168,8 @@
         {
             "src": "/img/icons/icon-512x512.png",
             "sizes": "512x512",
-            "type": "image/png"
-        },
-        {
-            "src": "/img/icons/icon-512x512.png",
-            "sizes": "512x512",
             "type": "image/png",
-            "purpose": "maskable"
+            "purpose": "any"
         }
     ]
 }
