--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+# APP_PREVIOUS_KEYS=
 
 BCRYPT_ROUNDS=12
 
@@ -17,12 +18,15 @@ LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_DAILY_DAYS=14
 
-INVERTEXTO_API_KEY=
-
-GEMINI_API_KEY=
-GEMINI_URL=
-GEMINI_MODEL=
+# Logging - Slack & Papertrail
+LOG_SLACK_WEBHOOK_URL=
+LOG_SLACK_USERNAME="Laravel Log"
+LOG_SLACK_EMOJI=":boom:"
+LOG_PAPERTRAIL_HANDLER=
+PAPERTRAIL_URL=
+PAPERTRAIL_PORT=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -30,25 +34,61 @@ DB_PORT=3306
 DB_DATABASE=frequencia_certa
 DB_USERNAME=root
 DB_PASSWORD=
+# DB_SOCKET=
+# DB_URL=
+# MYSQL_ATTR_SSL_CA=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
+SESSION_SECURE_COOKIE=
+SESSION_HTTP_ONLY=true
+SESSION_SAME_SITE=lax
+SESSION_PARTITIONED_COOKIE=false
+# SESSION_CONNECTION=
+# SESSION_TABLE=sessions
+# SESSION_STORE=
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
+QUEUE_FAILED_DRIVER=database-uuids
+
+# Filas (Queue) - Configurações Específicas
+# DB_QUEUE_CONNECTION=
+# DB_QUEUE_TABLE=jobs
+# DB_QUEUE=default
+# DB_QUEUE_RETRY_AFTER=90
+# BEANSTALKD_QUEUE_HOST=localhost
+# BEANSTALKD_QUEUE=default
+# SQS_PREFIX=
+# SQS_QUEUE=default
+# REDIS_QUEUE_CONNECTION=default
+# REDIS_QUEUE=default
 
 CACHE_STORE=database
+CACHE_PREFIX=
+# DB_CACHE_CONNECTION=
+# DB_CACHE_TABLE=cache
+# DB_CACHE_LOCK_CONNECTION=
+# DB_CACHE_LOCK_TABLE=
 
 MEMCACHED_HOST=127.0.0.1
+# MEMCACHED_PORT=11211
+# MEMCACHED_USERNAME=
+# MEMCACHED_PASSWORD=
+# MEMCACHED_PERSISTENT_ID=
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+# REDIS_URL=
+# REDIS_DB=0
+# REDIS_CACHE_DB=1
+# REDIS_PREFIX=
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
@@ -58,15 +98,81 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+# MAIL_URL=
+# MAIL_EHLO_DOMAIN=
+# MAIL_SENDMAIL_PATH=
+# MAIL_LOG_CHANNEL=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
+# AWS_URL=
+# AWS_ENDPOINT=
+# DYNAMODB_CACHE_TABLE=cache
+# DYNAMODB_ENDPOINT=
 
 VITE_APP_NAME="${APP_NAME}"
-
 VITE_VAPID_PUBLIC_KEY=
+
+# WebPush / VAPID
+VAPID_SUBJECT=
 VAPID_PUBLIC_KEY=
 VAPID_PRIVATE_KEY=
+# VAPID_PEM_FILE=
+# WEBPUSH_DB_TABLE=push_subscriptions
+# WEBPUSH_DB_CONNECTION=
+# WEBPUSH_AUTOMATIC_PADDING=true
+
+# Admin
+ADMIN_EMAIL=
+
+# Invertexto
+INVERTEXTO_API_KEY=
+
+# Gemini AI
+GEMINI_API_KEY=
+GEMINI_URL=
+GEMINI_MODEL=
+
+# Firebase
+FIREBASE_PROJECT=app
+FIREBASE_CREDENTIALS=
+# GOOGLE_APPLICATION_CREDENTIALS=
+FIREBASE_AUTH_TENANT_ID=
+FIREBASE_DATABASE_URL=
+FIREBASE_DYNAMIC_LINKS_DEFAULT_DOMAIN=
+FIREBASE_STORAGE_DEFAULT_BUCKET=
+FIREBASE_CACHE_STORE=file
+FIREBASE_HTTP_LOG_CHANNEL=
+FIREBASE_HTTP_DEBUG_LOG_CHANNEL=
+FIREBASE_HTTP_CLIENT_PROXY=
+FIREBASE_HTTP_CLIENT_TIMEOUT=
+
+# Sentry
+SENTRY_LARAVEL_DSN=
+SENTRY_DSN=
+SENTRY_RELEASE=
+SENTRY_ENVIRONMENT=
+SENTRY_SAMPLE_RATE=1.0
+SENTRY_TRACES_SAMPLE_RATE=
+SENTRY_PROFILES_SAMPLE_RATE=
+# SENTRY_ENABLE_LOGS=false
+
+# Sanctum
+# SANCTUM_STATEFUL_DOMAINS=
+# SANCTUM_TOKEN_PREFIX=
+
+# Auth
+# AUTH_GUARD=web
+# AUTH_PASSWORD_BROKER=users
+# AUTH_MODEL="App\Models\User"
+# AUTH_PASSWORD_RESET_TOKEN_TABLE=password_reset_tokens
+# AUTH_PASSWORD_TIMEOUT=10800
+
+# Serviços Terceiros (Mail/Notifications)
+# POSTMARK_API_KEY=
+# RESEND_API_KEY=
+SLACK_BOT_USER_OAUTH_TOKEN=
+SLACK_BOT_USER_DEFAULT_CHANNEL=
