--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "firebase": "^12.7.0",
         "gsap": "^3.14.2",
+        "intro.js": "^8.3.2",
         "sweetalert2": "^11.26.17"
     }
 }
